2011-10-05  Tony Chang  <tony@chromium.org>

        force margin:auto to 0 in flex items
        https://bugs.webkit.org/show_bug.cgi?id=69475

        Reviewed by Ojan Vafai.

        The spec used to say the margin had a value of flex(1 0 0), but changed to just be 0.

        * rendering/RenderFlexibleBox.cpp:
        (WebCore::RenderFlexibleBox::computePreferredLogicalWidth):
        (WebCore::RenderFlexibleBox::layoutAndPlaceChildrenInlineDirection):

2011-10-05  Dean Jackson  <dino@apple.com>

        Computed style for filter property
        https://bugs.webkit.org/show_bug.cgi?id=68477

        Reviewed by Simon Fraser.

        Reports the computed style for the new -webkit-filter
        property value.

        Test: css3/filters/filter-property-computed-style.html

        * css/CSSComputedStyleDeclaration.cpp:
        (WebCore::computedFilter):
        (WebCore::CSSComputedStyleDeclaration::getPropertyCSSValue):

2011-10-05  Jer Noble  <jer.noble@apple.com>

        Enable WEB_AUDIO by default in the WebKit/mac port.
        https://bugs.webkit.org/show_bug.cgi?id=68587

        Reviewed by Simon Fraser.

        No new tests; existing webaudio/ layout tests cover this.

        * Configurations/FeatureDefines.xcconfig:
        * WebCore.xcodeproj/project.pbxproj: Add a build step which copies audio resources to
            the WebCore.framework bundle.

2011-10-03  Ojan Vafai  <ojan@chromium.org>

        [flexbox] take marginBeforeForChild into account when positioning children
        https://bugs.webkit.org/show_bug.cgi?id=69313

        Reviewed by Tony Chang.

        * rendering/RenderFlexibleBox.cpp:
        (WebCore::RenderFlexibleBox::layoutAndPlaceChildrenInlineDirection):

2011-10-05  Vangelis Kokkevis  <vangelis@chromium.org>

        Switching threaded compositor from a compile time option to a
        run time one.
        https://bugs.webkit.org/show_bug.cgi?id=69391

        Reviewed by Darin Fisher.
